manifests/wordpress/wordpress-deployment.yaml
---
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: wordpress  
  namespace: meitaltal
spec:  
  replicas: 2  
  selector:  
    matchLabels:  
      app: wordpress  
  template:  
    metadata:  
      labels:  
        app: wordpress  
    spec: 
      imagePullSecrets:
        - name: ecr-secret 
      containers:  
      - name: wordpress  
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/meitaltal/k8s-workshop:wordpress-latest  
        ports:  
        - containerPort: 80  
          name: wordpress  
        volumeMounts:  
        - name: wp-data  
          mountPath: /var/www/html  
      volumes:  
      - name: wp-data  
        persistentVolumeClaim:  
          claimName: wordpress-pvc
